# cute_cat

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_cycle2_core_schema.py  003_garden_event_progress.py  004_cycle4_ai_memory_fields.py
backend/src/cute_cat/: __init__.py  config.py  main.py
backend/src/cute_cat/ai/: __init__.py  service.py
backend/src/cute_cat/api/: __init__.py  deps.py  errors.py  schemas.py
backend/src/cute_cat/api/routes/: auth.py  gardens.py  hospital.py  me.py  pets.py  shop.py
backend/src/cute_cat/auth/: tokens.py
backend/src/cute_cat/events/: __init__.py  constants.py  evaluate.py  hooks.py  progress_repo.py  rules.py  templates.py
backend/src/cute_cat/game/: __init__.py  actions.py  cycle2.py  economy.py  offline.py  stats.py  time.py
backend/src/cute_cat/persistence/: __init__.py  database.py  ids.py  models.py
backend/src/cute_cat/realtime/: __init__.py  garden_hub.py  garden_ws.py
backend/src/cute_cat/services/: __init__.py  inventory.py  pet_state.py
backend/tests/: conftest.py  test_auth_pets.py  test_cycle2_core.py  test_cycle3_events.py  test_cycle4_ai_controlled.py  test_health.py
doc/: API-后端与前端对接.md  MySQL建表语句.md  UI设计-规范与稿清单.md  切片0-2工程骨架.md  前端开发任务与对接.md  后端开发设计文档.md  周期3-任务拆分.md  周期5-发布前检查单.md  开发周期计划.md  开发收尾规范.md  开发进度日志.md  运维记录-仓库与首次推送.md  项目目录说明.md  项目设计文档.md
frontend/: .env.example  README.md  index.html  (+3 more)
(+23 files in other folders)
